--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,13 @@
-# Visual Studio temporary files, build results, and
-# user-specific files
+# Visual Studio
 .vs/
 *.user
 *.suo
-*.userosscache
-*.sln.docstates
 
-# Build results
-bin/
-obj/
-Debug/
-Release/
+# Build outputs
+[Bb]in/
+[Oo]bj/
 
-# EF Core Migrations folder
-Migrations/
-
-# Rider IDE
-.idea/
-
-# npm packages (if any)
-node_modules/
-
-# Publish output
-publish/
-
-# Logs
-*.log
-
-# NuGet
-*.nupkg
-packages/
+# Others
+*.dll
+*.pdb
+*.cache
