--- a/ITIResturant/ITIResturant/appsettings.json
+++ b/ITIResturant/ITIResturant/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Hamza": "Server=.;Database=RestaurantDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "Hamza": "Server=.;Database=RestaurantDataBase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Authentication": {
     "Google": {
