--- a/ITIResturant/ITIResturant/Restaurant.PL.csproj
+++ b/ITIResturant/ITIResturant/Restaurant.PL.csproj
@@ -12,6 +12,12 @@
 
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 
+	  <PackageReference Include="Hangfire" Version="1.8.21" />
+
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.8.21" />
+
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.8.21" />
+
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0" />
 
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="9.0.9" />
