Enhance front-end, sign up with face or google works now

--- a/ITIResturant/ITIResturant/appsettings.json
+++ b/ITIResturant/ITIResturant/appsettings.json
@@ -10,12 +10,12 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "YOUR_GOOGLE_CLIENT_ID",
-      "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
+      "ClientId": "203180894050-d01rb759jv8a3pns671e2hdfc2s0pp06.apps.googleusercontent.com",
+      "ClientSecret": "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"
     },
     "Facebook": {
-      "AppId": "YOUR_FACEBOOK_APP_ID",
-      "AppSecret": "YOUR_FACEBOOK_APP_SECRET"
+      "AppId": "1151659543549369",
+      "AppSecret": "048a5b0f2acbe6b6e2c68a83c29e292a"
     }
   },
   "EmailSettings": {
