--- a/ITIResturant/ITIResturant/appsettings.json
+++ b/ITIResturant/ITIResturant/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "connection": "Server=.;Database=RestaurantDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "connection": "Data Source=HOSSAM05;Initial Catalog=DBResturant;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   },
   "Authentication": {
     "Google": {
