change facebook id

--- a/ITIResturant/ITIResturant/appsettings.json
+++ b/ITIResturant/ITIResturant/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "connection": "Data Source=HOSSAM05;Initial Catalog=DBResturant;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "connection": "Data Source=.;Initial Catalog=DBResturant;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   },
   "Authentication": {
     "Google": {
@@ -14,8 +14,8 @@
       "ClientSecret": "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"
     },
     "Facebook": {
-      "AppId": "1881009262771492",
-      "AppSecret": "8c8cd25837549a7ff4ce3034bfef8383"
+      "AppId": "4220984141515328",
+      "AppSecret": "d971eb76cabb9696dbea9d5048a07e79"
     }
   },
   "EmailSettings": {
