--- a/ITIResturant/ITIResturant/appsettings.json
+++ b/ITIResturant/ITIResturant/appsettings.json
@@ -6,19 +6,7 @@
     }
   },
   "ConnectionStrings": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-
     "Hamza": "Server=(localdb)\\MSSQLLocalDB;Database=RestaurantDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-=======
-    "Hamza": "Server=.;Database=RestaurantDataBase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-
-=======
-    "connection": "Server=.;Database=RestaurantDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
->>>>>>> dc46f8112ae440304ab00abf53dc89d8a1925d3c
-=======
-    "connection": "Data Source=HOSSAM05;Initial Catalog=DBResturant;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
->>>>>>> main
   },
   "Authentication": {
     "Google": {
@@ -26,19 +14,26 @@
       "ClientSecret": "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"
     },
     "Facebook": {
-      "AppId": "1151659543549369",
-      "AppSecret": "048a5b0f2acbe6b6e2c68a83c29e292a"
+      "AppId": "1881009262771492",
+      "AppSecret": "8c8cd25837549a7ff4ce3034bfef8383"
     }
   },
+
+  // "EmailSettings": {
+ // "Email": "hemahamza.2005@gmail.com",
+ // "Password": "wtps jeaq zweh jymr"
+
+//  },
+
+
   "EmailSettings": {
-    "Email": "hemahamza.2005@gmail.com",
-    "Password": "wtps jeaq zweh jymr"
-
-  },
-  "AdminUser": {
-    "Email": "admin@restaurant.com",
-    "Password": "AdminAdmin0"
+    "SenderEmail": "hemahamza.2005@gmail.com",
+    "SenderPassword": "wtps jeaq zweh jymr",
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587
   },
 
-  "AllowedHosts": "*"
-}
+"AdminUser": {
+  "Email": "admin@restaurant.com",
+  "Password": "AdminAdmin0"
+}, "AllowedHosts": "*" }
