--- a/ITIResturant/ITIResturant/appsettings.json
+++ b/ITIResturant/ITIResturant/appsettings.json
@@ -6,11 +6,7 @@
     }
   },
   "ConnectionStrings": {
-<<<<<<< HEAD
-    "Hamza": "Server=(localdb)\\MSSQLLocalDB;Database=RestaurantDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-=======
     "connection": "Data Source=.;Initial Catalog=DBResturant;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
->>>>>>> 60a7d6513aad1aecfffae84675e544747719d1f6
   },
   "Authentication": {
     "Google": {
@@ -18,17 +14,10 @@
       "ClientSecret": "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"
     },
     "Facebook": {
-      "AppId": "1881009262771492",
-      "AppSecret": "8c8cd25837549a7ff4ce3034bfef8383"
+      "AppId": "4220984141515328",
+      "AppSecret": "d971eb76cabb9696dbea9d5048a07e79"
     }
   },
-
-  // "EmailSettings": {
- // "Email": "hemahamza.2005@gmail.com",
- // "Password": "wtps jeaq zweh jymr"
-
-//  },
-
 
   "EmailSettings": {
     "SenderEmail": "hemahamza.2005@gmail.com",
@@ -37,7 +26,9 @@
     "SmtpPort": 587
   },
 
-"AdminUser": {
-  "Email": "admin@restaurant.com",
-  "Password": "AdminAdmin0"
-}, "AllowedHosts": "*" }
+  "AdminUser": {
+    "Email": "admin@restaurant.com",
+    "Password": "AdminAdmin0"
+  },
+  "AllowedHosts": "*"
+}
